# nornir_netconf

./: .buildinfo  .clab-topo-netconf.yaml  .clab-topo-netconf.yml.bak  .coveragerc  .dockerignore  .gitignore  .pydocstyle.ini  .pylintrc  .travis.yml  .yamllint.yml  404.html  Dockerfile  Makefile  README.html  README.md  changelog.html  clab-topo-netconf.yml  docker-compose.yml  genindex.html  index.html  mkdocs.yml  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  sitemap.xml
.doctrees/: README.doctree  changelog.doctree  environment.pickle  index.doctree
.doctrees/additional/: dataclasses.doctree  rpc.doctree  use-examples.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/connections/: index.doctree
.doctrees/autoapi/helpers/: index.doctree
.doctrees/autoapi/netconf_capabilities/: index.doctree
.doctrees/autoapi/netconf_commit/: index.doctree
.doctrees/autoapi/netconf_edit_config/: index.doctree
.doctrees/autoapi/netconf_get/: index.doctree
.doctrees/autoapi/netconf_get_config/: index.doctree
.doctrees/autoapi/netconf_get_schemas/: index.doctree
.doctrees/autoapi/netconf_lock/: index.doctree
.doctrees/autoapi/netconf_rpc/: index.doctree
.doctrees/autoapi/netconf_validate/: index.doctree
.doctrees/autoapi/nornir_netconf/: index.doctree
.doctrees/autoapi/tasks/: index.doctree
.github/workflows/: ci-master.yml  ci.yml  documentation.yml  main.yaml  nornir_netconf.yml  test_nornir_netconf.yml
_sources/: README.md.txt  changelog.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/connections/: index.rst.txt
_sources/autoapi/helpers/: index.rst.txt
_sources/autoapi/netconf_capabilities/: index.rst.txt
_sources/autoapi/netconf_commit/: index.rst.txt
_sources/autoapi/netconf_edit_config/: index.rst.txt
_sources/autoapi/netconf_get/: index.rst.txt
_sources/autoapi/netconf_get_config/: index.rst.txt
_sources/autoapi/netconf_get_schemas/: index.rst.txt
_sources/autoapi/netconf_lock/: index.rst.txt
_sources/autoapi/netconf_rpc/: index.rst.txt
_sources/autoapi/netconf_validate/: index.rst.txt
_sources/autoapi/nornir_netconf/: index.rst.txt
_sources/autoapi/tasks/: index.rst.txt
additional/: dataclasses.html  rpc.html  use-examples.html
autoapi/: index.html
autoapi/connections/: index.html
autoapi/connections/netconf/: index.html
autoapi/helpers/: index.html
autoapi/helpers/general/: index.html
autoapi/helpers/models/: index.html
autoapi/helpers/rpc/: index.html
autoapi/helpers/rpc_helpers/: index.html
autoapi/netconf_capabilities/: index.html
autoapi/netconf_commit/: index.html
autoapi/netconf_edit_config/: index.html
autoapi/netconf_get/: index.html
autoapi/netconf_get_config/: index.html
autoapi/netconf_get_schemas/: index.html
autoapi/netconf_lock/: index.html
autoapi/netconf_rpc/: index.html
autoapi/netconf_validate/: index.html
autoapi/nornir_netconf/: index.html
autoapi/tasks/: index.html
changelog/: index.html
clab-clab-topo-netconf.yml/: ansible-inventory.yml
clab-files/: clab-arista.yml  clab-topo-netconf.yml  interfaces.json
docs/: changelog.md  conf.py  index.html  index.md  index.rst  rpc.md
docs/additional/: dataclasses.md  rpc.md  use-examples.md
docs/public/: .buildinfo  README.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/public/.doctrees/: README.doctree  changelog.doctree  environment.pickle  index.doctree
docs/public/_sources/: README.md.txt  changelog.md.txt  index.rst.txt
docs/public/additional/: rpc.html
docs/public/autoapi/: index.html
examples/example-project/: config.yml  nr_edit_config_global_lock.py  nr_get_capabilities.py  nr_get_config.py  nr_get_schemas.py
examples/example-project/inventory/: groups.yml  hosts.yml
nornir_netconf/: __init__.py
nornir_netconf/example-project/: config.yml  nr_edit_config_global_lock.py  nr_get_capabilities.py  nr_get_config.py
nornir_netconf/example-project/inventory/: groups.yml  hosts.yml
nornir_netconf/plugins/connections/: __init__.py  netconf.py
nornir_netconf/plugins/helpers/: __init__.py  general.py  models.py  rpc.py  rpc_helpers.py
public/: changelog.html  search.html  searchindex.js
public/.doctrees/: README.doctree  environment.pickle  index.doctree
public/_sources/: changelog.md.txt  index.rst.txt
public/autoapi/: index.html
search/: search_index.json
site/: 404.html  index.html  search.html
site/changelog/: index.html
site/search/: search_index.json
tests/: conftest.py  test_netconf_capabilities.py  test_netconf_edit_config.py  test_netconf_get.py  test_netconf_get_config.py
tests/integration/: test_netconf_capabilities.py  test_netconf_connection.py  test_netconf_get.py  test_netconf_get_config.py  test_netconf_lock.py  test_netconf_schemas.py  test_sros_get_config.py  test_sros_integration.py
tests/inventory_data/: groups.yaml  groups.yml  hosts-container.yaml  hosts-container.yml  hosts-local.yaml  hosts-local.yml  hosts.yaml  hosts.yml
tests/unit/: test_general.py  test_general_unit.py  test_helpers.py  test_helpers_unit.py  test_netconf_capabilities.py  test_netconf_commit.py  test_netconf_connection.py  test_netconf_edit_config.py  test_netconf_edit_config_unit.py  test_netconf_get.py  test_netconf_get_config.py  test_netconf_lock_unit.py  test_netconf_rpc.py  test_netconf_schemas_unit.py  test_netconf_validate.py  test_nornir_hosts.py  test_nornir_hosts_unit.py  test_plugin_helpers.py
(+144 files in other folders)
