[tool.poetry]
name = "nornir_netconf"
version = "0.1.0"
description = "Netconf plugin for nornir using ncclient"
authors = ["Hugo Tinoco <hugotinoco@icloud.com>", "Patrick Ogenstad <patrick@ogenstad.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/h4ndzdatm0ld/nornir_netconf"
keywords = ["nornir", "netconf", "ncclient"]

[tool.poetry.plugins."nornir.plugins.connections"]
"netconf" = "nornir_netconf.plugins.connections:Netconf"

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
ncclient = "^0.6.12"
nornir = "^3.1.1"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
black = { version = "19.10b0", allow-prereleases = true }
pytest = "*"
pytest-cov = "^2.10.1"
bandit = "^1.7.0"
pylint = "^2.10.2"
flake8 = "^3.9.2"
coverage = "^5.5"
yamllint = "^1.26.3"
nornir-utils = "^0.1.2"
docker = "^5.0.0"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
MonkeyType = "^21.5.0"
pytype = "^2021.8.24"
mypy = "^0.910"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

