[tool.poetry]
name = "nornir_netconf"
version = "1.0.0"
description = "Netconf plugin for nornir using ncclient"
authors = ["Hugo Tinoco <hugotinoco@icloud.com>", "Patrick Ogenstad <patrick@ogenstad.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/h4ndzdatm0ld/nornir_netconf"
keywords = ["nornir", "netconf", "ncclient"]
documentation = "https://nornir-netconf.readthedocs.io"
packages = [
    { include = "nornir_netconf" },
]

[tool.poetry.plugins."nornir.plugins.connections"]
"netconf" = "nornir_netconf.plugins.connections:Netconf"

[tool.poetry.dependencies]
python = "^3.7.0"
ncclient = "^0.6.12"
xmltodict = "^0.12.0"
nornir = {version = "^3.0.0", allow-prereleases = true}


[tool.poetry.dev-dependencies]
black = { version = "19.10b0", allow-prereleases = true }
pytest = "*"
pytest-cov = "*"
bandit = "*"
pylint = "*"
flake8 = "*"
coverage = "*"
yamllint = "*"
nornir-utils = "*"
docker = "*"
isort = "*"
pydocstyle = "*"
mypy = "*"
Sphinx = "*"
myst-parser = "*"
sphinx-autoapi = "*"
sphinx-rtd-theme = "*"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

