[tool.poetry]
name = "nornir_netconf"
version = "1.1.0"
description = "NETCONF plugin for Nornir"
authors = ["Hugo Tinoco <hugotinoco@icloud.com>", "Patrick Ogenstad <patrick@ogenstad.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/h4ndzdatm0ld/nornir_netconf"
keywords = ["nornir", "netconf", "ncclient"]
documentation = "https://h4ndzdatm0ld.github.io/nornir_netconf/"
packages = [
    { include = "nornir_netconf" },
]

[tool.poetry.plugins."nornir.plugins.connections"]
"netconf" = "nornir_netconf.plugins.connections:Netconf"

[tool.poetry.dependencies]
ncclient = "^0.6.9"
python = "^3.8"
nornir = {version = "^3.0.0", allow-prereleases = true}


[tool.poetry.dev-dependencies]
black = "*"
pytest-cov = "*"
bandit = "*"
pylint = "*"
coverage = "*"
yamllint = "*"
nornir-utils = "*"
isort = "*"
mypy = "*"
Sphinx = "*"
myst-parser = "*"
sphinx-autoapi = "*"
sphinx-pdj-theme = "*"
sphinxcontrib-napoleon = "*"
pytest = "*"
xmltodict = "*"
ruff = "*"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | clab-arista-testing.yml
    | clab-files
  )/
)
'''

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10